add login feature, remove minecraft-auth, use mclc authenticator and msmc instead

--- a/package.json
+++ b/package.json
@@ -38,8 +38,9 @@
     "jest": "^27.4.3",
     "jest-resolve": "^27.4.2",
     "jest-watch-typeahead": "^1.0.0",
-    "minecraft-auth": "^1.0.31",
+    "minecraft-launcher-core": "^3.16.12",
     "mini-css-extract-plugin": "^2.4.5",
+    "msmc": "^3.0.6",
     "postcss": "^8.4.4",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-loader": "^6.2.1",
